--- a/webapp/src/stylesheets/main.scss
+++ b/webapp/src/stylesheets/main.scss
@@ -7,7 +7,27 @@ $input-placeholder-color: rgba(0, 0, 0, 0.4);
   --bs-link-opacity: 0.75;
 }
 
+$enable-negative-margins: true;
+
 @import '~bootstrap/scss/bootstrap';
+$bootstrap-icons-font-dir: '~bootstrap-icons/font/fonts';
+@import '~bootstrap-icons/font/bootstrap-icons';
 
 // Writing your own styles should be the last resort.
 // Please try your best to use the existing Bootstrap classes first.
+
+.card-object {
+  width: 200px;
+  height: 100%;
+  margin: auto;
+  text-align: center;
+
+  img {
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .card-body {
+    padding: 0.5rem;
+  }
+}
