--- a/webapp/src/stylesheets/main.scss
+++ b/webapp/src/stylesheets/main.scss
@@ -35,3 +35,46 @@ body {
     padding: 0.5rem;
   }
 }
+
+a{
+  text-decoration: none;
+}
+.accept {
+  color: #FFF;
+  background: #44CC44;
+  padding: 15px 20px;
+  box-shadow: 0 4px 0 0 #2EA62E;
+  border-radius: 15px;
+}
+.accept:hover {
+  background: #6FE76F;
+  box-shadow: 0 4px 0 0 #7ED37E;
+}
+.deny {
+  color: #FFF;
+  background: tomato;
+  padding: 15px 20px;
+  box-shadow: 0 4px 0 0 #CB4949;
+  border-radius: 15px;
+}
+.deny:hover {
+  background: rgb(255, 147, 128);
+  box-shadow: 0 4px 0 0 #EF8282;
+}
+
+.bordure_verticale {
+  height: 55px;
+  padding-right: 10px;
+  padding-left: 10px;
+  border-right: 1px solid rgba(0, 0, 0, 0.445);
+  display: inline-block;
+  vertical-align: middle;
+  
+  }
+
+#refuse{
+  border-radius: 10px;
+  vertical-align: middle;
+  margin-left: 10px;
+  width: 400px;
+}
