refactor: show more info on users list, including photos

--- a/webapp/src/stylesheets/main.scss
+++ b/webapp/src/stylesheets/main.scss
@@ -36,11 +36,19 @@ body {
   }
 }
 
-a{
+// Always align table cells vertically in the middle
+.table > tbody > tr {
+  > th,
+  > td {
+    vertical-align: middle;
+  }
+}
+
+a {
   text-decoration: none;
 }
 .accept {
-  color: #FFF;
+  color: #fff;
   background: rgba(93, 150, 93, 0.82);
   padding: 15px 20px;
   border-radius: 15px;
@@ -49,7 +57,7 @@ a{
   background: #517051;
 }
 .deny {
-  color: #FFF;
+  color: #fff;
   background: rgba(208, 101, 78, 0.83);
   padding: 15px 20px;
   border-radius: 15px;
@@ -63,10 +71,9 @@ a{
   margin: 20px;
   display: inline-block;
   vertical-align: middle;
-  
-  }
+}
 
-#refuse{
+#refuse {
   border-radius: 10px;
   vertical-align: middle;
   width: 400px;
