--- a/webapp/src/stylesheets/main.scss
+++ b/webapp/src/stylesheets/main.scss
@@ -2,11 +2,11 @@
 // Please try your best to use the existing Bootstrap classes first.
 
 // From the "spring colors" palette given by the client
-$primary: #7cba46;
-$success: #619746;
-$danger: #d0292a;
-$warning: #fdae56;
-$info: #145c9b;
+$primary: rgba(124, 186, 70, 0.4);
+$success: rgba(91, 154, 61, 0.5);
+$danger: rgba(208, 41, 42, 0.5);
+$warning: rgba(253, 174, 86, 0.5);
+$info: rgba(20, 92, 155, 0.5);
 
 // Bootstrap doesn't do this for some reason
 // No need to touch this
