fix: render long descriptions properly

--- a/webapp/src/stylesheets/main.scss
+++ b/webapp/src/stylesheets/main.scss
@@ -160,6 +160,14 @@ input:-webkit-autofill:active {
     font-weight: bold;
   }
 
+  .object-card-description {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &.sold {
     &:before {
       content: 'Vendu';
